view roles on about page

--- a/tinker/templates/about-page.html
+++ b/tinker/templates/about-page.html
@@ -63,6 +63,7 @@
     </div>
 
     <small>Logged in as: {{ session['username'] }}</small>
+    <small>Roles: {{ session['roles'] }}</small>
 {% endblock %}
 
 
