--- a/tinker/templates/foundation_base.html
+++ b/tinker/templates/foundation_base.html
@@ -22,8 +22,9 @@
     {% endblock %}
 
     {% block foundation_styles %}
-      <link rel="stylesheet" href="//cdn1.bethel.edu/foundation/css/normalize.css">
-      <link rel="stylesheet" href="//cdn2.bethel.edu/foundation/css/foundation.min.css">
+{#      <link rel="stylesheet" href="//cdn1.bethel.edu/foundation/css/normalize.css">#}
+{#      <link rel="stylesheet" href="//cdn2.bethel.edu/foundation/css/foundation.min.css">#}
+        <link rel="stylesheet" href="static/assets/css/paper-dashboard.css">
     {% endblock %}
 
     {% block styles %}
