Changed some colors to see what it was effecting

--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -16,22 +16,22 @@
   <style>
 
    .button-group>li>.button-nav {
-     background-color: #0069AA;
+     background-color: #2015aa;
    }
    .button-group>li>.button-nav:hover {
-     background-color: #0F2C52;
+     background-color: #2015aa;
    }
 
     .button.small, .button.small.success, .button.tiny, .button.postfix, .input.postfix{
-      background-color: #0069AA;
+      background-color: #1833aa;
     }
 
     .button.small:hover, .button.small.success:hover, .button.tiny:hover, .button.postfix:hover{
-      background-color: #0F2C52;
+      background-color: #190a52;
     }
 
     .button-group>li>.active{
-       background-color: #0F2C52;
+       background-color: #2015aa;
       }
 
 
