--- a/tinker/e_announcements/templates/in-workflow.html
+++ b/tinker/e_announcements/templates/in-workflow.html
@@ -13,7 +13,7 @@
           Edits Pending Approval
         </h3>
 
-        <p>You recently made an edit to your E-Announcement and is currently pending approval. Please wait until the changes have been approved before you make additional edits. Go back to your <a href="/e-announcement">E-Announcements</a>.</p>
+        <p>You recently made an edit to your E-Announcement and is currently pending approval. Please wait until the changes have been approved before you make additional edits. Go back to your <a href="{{ url_for('e-announcements.EAnnouncementsView:index') }}">E-Announcements</a>.</p>
         <p>If you have any questions or concerns about the submission of the E-Announcement, please contact Christine Ernston, at c-erntson@bethel.edu</p>
 
     </div>
