--- a/tinker/e_announcements/templates/view.html
+++ b/tinker/e_announcements/templates/view.html
@@ -1,11 +1,11 @@
 {% extends "tinker-base.html" %}
 
-{% block title %}{{ edit_data.title }}{% endblock %}
-{% block page_title %}{{ edit_data.title }}{% endblock %}
+{% block title %}{{ title }}{% endblock %}
+{% block page_title %}{{ title }}{% endblock %}
 
 {% block main_content %}
 
-    <p>{{ edit_data.message | safe}}</p>
+    <p>{{ message | safe}}</p>
 
     <hr/>
 
@@ -15,7 +15,7 @@
         <h5>Second Date</h5>
         <p>{{ second }}</p>
     {% endif %}
-    <small>{{ edit_data.banner_roles }}</small>
+    <small>{{ banner_roles }}</small>
 
 {% endblock %}
 
