--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block page_title %}
-  {% if add_form %}
+  {% if new_form %}
     Add a new event
   {% else %}
     Edit your event
@@ -23,7 +23,7 @@
   <div class="row">
   <div class="large-12 columns">
       <p>If you have any questions as you submit your event, please contact Conference and Event Services at 651.638.6090.</p>
-    {% if add_form %}
+    {% if new_form %}
       <form id="eventform" action="/event/submit" method="post">
     {% else %}
       <form id="eventform" action="/event/submit-edit" method="post">
