--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -26,7 +26,7 @@
 
     <hr />
 
-    <div class="row">
+    <div class="main-panel">
         <div class="large-6 columns">
 
             <a class="button expand" href="/event"><img src="get-image/events-icon.png" class="button-image" /><br />Manage events</a>
@@ -42,7 +42,7 @@
 
 
     {% if 'Redirects' in session['groups'] or 'Administrators' in session['groups'] %}
-      <div class="row">
+      <div class="main-panel">
         <div class="large-6 columns">
           <a href="/admin/redirect" class="button expand"><img src="get-image/redirect-icon.png" class="button-image" /><br />Manage Redirects</a>
         </div>
@@ -53,7 +53,7 @@
       </div>
     {% endif %}
 
-      <div class="row">
+      <div class="main-panel">
         <div class="large-6 columns">
           <a href="/e-announcement" class="button expand"><img src="get-image/e-announcement.png" class="button-image" /><br />Manage E-Announcements</a>
         </div>
