--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -2,12 +2,12 @@
 
 {% block title %}Home{% endblock %}
 
-{% block styles %}
-  <style type="text/css">
-  </style>
-{% endblock %}
+{#{% block styles %}#}
+{#  <style type="text/css">#}
+{#  </style>#}
+{#{% endblock %}#}
 
-{% block page_title %}Bethel University Tinker{% endblock %}
+{#{% block page_title %}Bethel University Tinker{% endblock %}#}
 
 {% block main_content %}
 <div class="row">
@@ -20,116 +20,116 @@
 
   </div>
  </div>
-<hr/>
-<div class="row">
-
-  <div class="large-12 columns">
-    {% if forms %}
-      <h3>Your Events</h3>
-      <hr />
-      {% endif %}
-
-    <a href="add#page-title" class="small button success">Create New Event</a>
-   {% for form in forms%}
-      <div class="row">
-        <div class="large-6 columns">
-          <p>
-            {% if form.is_published %}
-              <a href={{ form.path }}>{{ form.title }}</a>
-            {% else %}
-              {{ form.title }}
-            {% endif %}
-            <br/>
-            {% if form.is_published%}
-                <small>
-                    <p>{{ form.dates | safe}}</p>
-                    <a href={{ form.path }}>{{ form.path }}</a>
-                </small>
-            {% endif %}
-          </p>
-        </div>
-        <div class="large-6 columns small-3">
-          <ul class="button-group">
-            {% if form.is_published %}
-              <li><a href="{{ form.path }}" class="small button success">View</a></li>
-              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
-              <li><a href="/event/duplicate/{{ form.id }}#page-title" class="small button">Duplicate</a></li>
-            {% else %}
-              <li><a class="small button success">Not Approved</a></li>
-            {% endif %}
-
-            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>
-           </ul>
-        </div>
-        <hr/>
-      </div>
-    {% endfor %}
-
-
-    <!-- Event Approver forms -->
-    {% if event_approver_forms %}
-        <br />
-        <hr />
-        <h3>Event Approver</h3>
-        <hr />
-    {% endif %}
-    {% for form in event_approver_forms %}
-        <div class="row">
-        <div class="large-6 columns">
-          <p>
-            {% if form.is_published %}
-              <a href={{ form.path }}>{{ form.title }}</a>
-            {% else %}
-              {{ form.title }}
-            {% endif %}
-            <br/>
-            {% if form.is_published%}
-                <small>
-                    <p>{{ form.dates | safe}}</p>
-                    <a href={{ form.path }}>{{ form.path }}</a>
-                </small>
-            {% endif %}
-          </p>
-        </div>
-        <div class="large-6 columns small-3">
-          <ul class="button-group">
-            {% if form.is_published %}
-              <li><a href="{{ form.path }}" class="small button success">View</a></li>
-              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
-              <li><a href="/event/duplicate/{{ form.id }}#page-title" class="small button">Duplicate</a></li>
-            {% else %}
-              <li><a class="small button success">Not Approved</a></li>
-            {% endif %}
-            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>
-           </ul>
-        </div>
-        <hr/>
-      </div>
-    {%  endfor %}
-
-  </div>
-</div>
-
-
+{#<hr/>#}
+{#<div class="main-panel">#}
+{##}
+{#  <div class="content">#}
+{#    {% if forms %}#}
+{#      <h3>Your Events</h3>#}
+{#      <hr />#}
+{#      {% endif %}#}
+{##}
+{#    <a href="add#page-title" class="small button success">Create New Event</a>#}
+{#   {% for form in forms%}#}
+{#      <div class="row">#}
+{#        <div class="large-6 columns">#}
+{#          <p>#}
+{#            {% if form.is_published %}#}
+{#              <a href={{ form.path }}>{{ form.title }}</a>#}
+{#            {% else %}#}
+{#              {{ form.title }}#}
+{#            {% endif %}#}
+{#            <br/>#}
+{#            {% if form.is_published%}#}
+{#                <small>#}
+{#                    <p>{{ form.dates | safe}}</p>#}
+{#                    <a href={{ form.path }}>{{ form.path }}</a>#}
+{#                </small>#}
+{#            {% endif %}#}
+{#          </p>#}
+{#        </div>#}
+{#        <div class="large-6 columns small-3">#}
+{#          <ul class="button-group">#}
+{#            {% if form.is_published %}#}
+{#              <li><a href="{{ form.path }}" class="small button success">View</a></li>#}
+{#              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>#}
+{#              <li><a href="/event/duplicate/{{ form.id }}#page-title" class="small button">Duplicate</a></li>#}
+{#            {% else %}#}
+{#              <li><a class="small button success">Not Approved</a></li>#}
+{#            {% endif %}#}
+{##}
+{#            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>#}
+{#           </ul>#}
+{#        </div>#}
+{#        <hr/>#}
+{#      </div>#}
+{#    {% endfor %}#}
+{##}
+{##}
+{#    <!-- Event Approver forms -->#}
+{#    {% if event_approver_forms %}#}
+{#        <br />#}
+{#        <hr />#}
+{#        <h3>Event Approver</h3>#}
+{#        <hr />#}
+{#    {% endif %}#}
+{#    {% for form in event_approver_forms %}#}
+{#        <div class="row">#}
+{#        <div class="large-6 columns">#}
+{#          <p>#}
+{#            {% if form.is_published %}#}
+{#              <a href={{ form.path }}>{{ form.title }}</a>#}
+{#            {% else %}#}
+{#              {{ form.title }}#}
+{#            {% endif %}#}
+{#            <br/>#}
+{#            {% if form.is_published%}#}
+{#                <small>#}
+{#                    <p>{{ form.dates | safe}}</p>#}
+{#                    <a href={{ form.path }}>{{ form.path }}</a>#}
+{#                </small>#}
+{#            {% endif %}#}
+{#          </p>#}
+{#        </div>#}
+{#        <div class="large-6 columns small-3">#}
+{#          <ul class="button-group">#}
+{#            {% if form.is_published %}#}
+{#              <li><a href="{{ form.path }}" class="small button success">View</a></li>#}
+{#              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>#}
+{#              <li><a href="/event/duplicate/{{ form.id }}#page-title" class="small button">Duplicate</a></li>#}
+{#            {% else %}#}
+{#              <li><a class="small button success">Not Approved</a></li>#}
+{#            {% endif %}#}
+{#            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>#}
+{#           </ul>#}
+{#        </div>#}
+{#        <hr/>#}
+{#      </div>#}
+{#    {%  endfor %}#}
+{##}
+{#  </div>#}
+{#</div>#}
+{##}
+{##}
 {#Delete confirm modal#}
-<div id="confirmModal" class="reveal-modal" data-reveal>
-  <h2>Are you sure you want to delete?</h2>
-  <p class="lead">Your event page will be unpublished and removed from the calendar.</p>
-  <a class="modal-confirm" id="modal-confirm" href="/delete/formid">Delete</a>
-  <a class="close-reveal-modal">&#215;</a>
-</div>
-
+{#<div id="confirmModal" class="reveal-modal" data-reveal>#}
+{#  <h2>Are you sure you want to delete?</h2>#}
+{#  <p class="lead">Your event page will be unpublished and removed from the calendar.</p>#}
+{#  <a class="modal-confirm" id="modal-confirm" href="/delete/formid">Delete</a>#}
+{#  <a class="close-reveal-modal">&#215;</a>#}
+{#</div>#}
+{##}
 {% endblock %}
-
-{% block scripts %}
-
+{##}
+{#{% block scripts %}#}
+{##}
 {#  Script to update the modal submit to delete the correct form#}
-  <script type="text/javascript">
-    $(".delete-press").click(function(){
-      $("#modal-confirm").attr("href", "/event/delete/" + $(this).data('event-id'));
-
-    });
-  $(document).foundation();
-  </script>
-
-{% endblock %}
+{#  <script type="text/javascript">#}
+{#    $(".delete-press").click(function(){#}
+{#      $("#modal-confirm").attr("href", "/event/delete/" + $(this).data('event-id'));#}
+{##}
+{#    });#}
+{#  $(document).foundation();#}
+{#  </script>#}
+{##}
+{#{% endblock %}#}
