--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -1,134 +1,268 @@
 {% extends "creativeTim_base.html" %}
-{% import 'nav.html' as nav %}
+{#{% import 'nav.html' as nav %}#}
 
-{% block styles %}
-  <script src="{{ url_for('static', filename='jquery.js') }}"></script>
-    <style>
-    .table-hover:hover{
-      background-color: #dddddd;
-      cursor: pointer;
-    }
-  </style>
-{% endblock  %}
+{#{% block styles %}#}
+{#    <script src="{{ url_for('static', filename='jquery.js') }}"></script>#}
+{#    <style>#}
+{#        .table-hover:hover {#}
+{#            background-color: #dddddd;#}
+{#            cursor: pointer;#}
+{#        }#}
+{#    </style>#}
+{#{% endblock %}#}
+{##}
+{#{% block head_add %}#}
+{##}
+{#    <style>#}
+{##}
+{#        .button-group > li > .button-nav {#}
+{#            background-color: #2015aa;#}
+{#        }#}
+{##}
+{#        .button-group > li > .button-nav:hover {#}
+{#            background-color: #2015aa;#}
+{#        }#}
+{##}
+{#        .button.small, .button.small.success, .button.tiny, .button.postfix, .input.postfix {#}
+{#            background-color: #1833aa;#}
+{#        }#}
+{##}
+{#        .button.small:hover, .button.small.success:hover, .button.tiny:hover, .button.postfix:hover {#}
+{#            background-color: #190a52;#}
+{#        }#}
+{##}
+{#        .button-group > li > .active {#}
+{#            background-color: #2015aa;#}
+{#        }#}
+{##}
+{##}
+{#    </style>#}
+{##}
+{##}
+{#{% endblock %}#}
 
-{% block head_add %}
+{% block title %}{{ title }} | Tinker{% endblock %}
 
-  <style>
-
-   .button-group>li>.button-nav {
-     background-color: #2015aa;
-   }
-   .button-group>li>.button-nav:hover {
-     background-color: #2015aa;
-   }
-
-    .button.small, .button.small.success, .button.tiny, .button.postfix, .input.postfix{
-      background-color: #1833aa;
-    }
-
-    .button.small:hover, .button.small.success:hover, .button.tiny:hover, .button.postfix:hover{
-      background-color: #190a52;
-    }
-
-    .button-group>li>.active{
-       background-color: #2015aa;
-      }
+{% block body_content %}
 
 
-  </style>
+    {#  <div class="row">#}
+    {#    <div class="large-12 columns">#}
+    {#      <div id="nav" class="nav-bar right">#}
+    {#        {{ nav.nav() }}#}
+    {#      </div>#}
+    {#      <h1 class="title">{% block page_title %}Bethel University Tinker{% endblock %}</h1>#}
+    {#      <hr />#}
+    {#    </div>#}
+    {#  </div>#}
+
+    <body>
+
+    <div class="wrapper">
+        <div class="sidebar" data-background-color="white" data-active-color="danger">
+
+            <!--
+                Tip 1: you can change the color of the sidebar's background using: data-background-color="white | black"
+                Tip 2: you can change the color of the active button using the data-active-color="primary | info | success | warning | danger"
+            -->
+
+            <div class="sidebar-wrapper">
+                <div class="logo">
+                    <a href="https://www.bethel.edu/" class="simple-text">
+                        Bethel University
+                    </a>
+                </div>
+
+                <ul class="nav">
+                    <li class="active">
+                        <a href="/">
+                            <i class="ti-panel"></i>
+                            <p>Home</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/event">
+                            <i class="ti-user"></i>
+                            <p>Events</p>
+                        </a>
+                    </li>
+                    <li>
+                        {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}
+                            <a href="/faculty-bio">
+                                <i class="ti-view-list-alt"></i>
+                                <p>Faculty Bios</p>
+                            </a>
+                        {% endif %}
+                    </li>
+                    <li>
+                        <a href="e-announcement">
+                            <i class="ti-text"></i>
+                            <p>E-Announcements</p>
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        {% if 'Administrators' in session['groups'] or 'Tinker Redirects' in session['groups'] %}
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                <i class="ti-pencil-alt2"></i>
+                                <p>Admin Menu &raquo;</p>
+                            </a>
+                            <ul class="dropdown-menu">
+                                {% if 'Administrators' in session['groups'] %}
+                                    <li><a href="/admin/publish-manager">Publisher</a></li>
+                                    <li><a href="/admin/sync">Sync Metadata</a></li>
+                                    {#                                <li><a href="/admin/blink-roles" class="button-nav">Blink Layout Owners</a></li>#}
+                                {% endif %}
+                                <li><a href="/admin/cache-clear">Clear Cache</a></li>
+                                <li><a href="/admin/redirect">Redirects</a></li>
+                            </ul>
+                        {% endif %}
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="main-panel">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar bar1"></span>
+                            <span class="icon-bar bar2"></span>
+                            <span class="icon-bar bar3"></span>
+                        </button>
+                        <a class="navbar-brand" href="/">Tinker</a>
+                        {#                    </div>#}
+                        {#                    <div class="collapse navbar-collapse">#}
+                        {#                        <ul class="nav navbar-nav navbar-right">#}
+                        {#                                                    <li>#}
+                        {#                                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
+                        {#                                                            <i class="ti-panel"></i>#}
+                        {#                                                            <p>Stats</p>#}
+                        {#                                                        </a>#}
+                        {#                                                    </li>#}
+                        {#                                                    <li class="dropdown">#}
+                        {#                                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
+                        {#                                                            <i class="ti-bell"></i>#}
+                        {#                                                            <p class="notification">5</p>#}
+                        {#                                                            <p>Notifications</p>#}
+                        {#                                                            <b class="caret"></b>#}
+                        {#                                                        </a>#}
+                        {#                                                        <ul class="dropdown-menu">#}
+                        {#                                                            <li><a href="#">Notification 1</a></li>#}
+                        {#                                                            <li><a href="#">Notification 2</a></li>#}
+                        {#                                                            <li><a href="#">Notification 3</a></li>#}
+                        {#                                                            <li><a href="#">Notification 4</a></li>#}
+                        {#                                                            <li><a href="#">Another notification</a></li>#}
+                        {#                                                        </ul>#}
+                        {#                                                    </li>#}
+                        {#                                                    <li>#}
+                        {#                                                        <a href="#">#}
+                        {#                                                            <i class="ti-settings"></i>#}
+                        {#                                                            <p>Settings</p>#}
+                        {#                                                        </a>#}
+                        {#                                                    </li>#}
+                        {#                        </ul>#}
+                        {##}
+                        {#                    </div>#}
+                    </div>
+            </nav>
+
+
+            {% block main_content %}
+            {% endblock %}
+
+
+            <footer class="footer">
+                <div class="container-fluid">
+                    <footer class="row">
+                        <div class="large-12 columns">
+                            <hr/>
+                            <div class="row">
+                                <div class="large-6 columns">
+                                    <p>&copy; Bethel University -- <a href="/about">About</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </footer>
+                </div>
+            </footer>
+
+        </div>
+    </div>
+
+
+    </body>
+
+
+    {#  <div class="row">#}
+    {##}
+
+    {#            <!-- End Main Content -->#}
+    {#          </div>#}
+    {##}
+    {#          <!-- End Main Content and Sidebar -->#}
+    {##}
+    {##}
+    {#          <!-- Footer -->#}
+    {#            <footer class="footer">#}
+    {#            <div class="container-fluid">#}
+    {#				<div class="copyright pull-right">#}
+    {#                     <p>&copy; Bethel University -- <a href="/about">About</a></p>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#        </footer>#}
 
 
 {% endblock %}
 
-{% block title %}{{title}} | Tinker{% endblock %}
 
-{% block body_content %}
-
-  <div class="row">
-    <div class="large-12 columns">
-      <div id="nav" class="nav-bar right">
-        {{ nav.nav() }}
-      </div>
-      <h1 class="title">{% block page_title %}Bethel University Tinker{% endblock %}</h1>
-      <hr />
-    </div>
-  </div>
-
-  <div class="row">
-
-            <!-- Main Blog Content -->
-            <div class="main-panel">
-
-                  {% block main_content %}
-                  {% endblock %}
-            </div>
-
-            <!-- End Main Content -->
-          </div>
-
-          <!-- End Main Content and Sidebar -->
+{% block endbody %}
 
 
-          <!-- Footer -->
-            <footer class="footer">
-            <div class="container-fluid">
-				<div class="copyright pull-right">
-                     <p>&copy; Bethel University -- <a href="/about">About</a></p>
-                </div>
-            </div>
-        </footer>
-
-{#          <footer class="row">#}
-{#            <div class="large-12 columns">#}
-{#              <hr />#}
-{#              <div class="row">#}
-{#                <div class="large-6 columns">#}
-{#                  <p>&copy; Bethel University -- <a href="/about">About</a></p>#}
-{#                </div>#}
-{#              </div>#}
-{#            </div>#}
-{#          </footer>#}
-    {% endblock %}
+    <!--   Core JS Files   -->
+    <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
+    <script src="http://127.0.0.1:5000/static/assets/js/paper-dashboard.js"></script>
 
 
-  {% block endbody %}
+    {#    <!--   Core JS Files   -->#}
+    {#    <script src="static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>#}
+    {#    <script src="static/assets/js/bootstrap.min.js" type="text/javascript"></script>#}
+    {##}
+    {#    <!--  Checkbox, Radio & Switch Plugins -->#}
+    {#    <script src="static/assets/js/bootstrap-checkbox-radio.js"></script>#}
+    {##}
+    {#    <!--  Charts Plugin -->#}
+    {#    <script src="static/assets/js/chartist.min.js"></script>#}
+    {##}
+    {#    <!--  Notifications Plugin    -->#}
+    {#    <script src="static/assets/js/bootstrap-notify.js"></script>#}
+    {##}
+    {##}
+    {#    <script type="text/javascript">#}
+    {#        $(document).ready(function () {#}
+    {#            if (typeof(CKEDITOR) != "undefined") {#}
+    {#                CKEDITOR.config.format_tags = 'p';#}
+    {#                CKEDITOR.config.disableNativeSpellChecker = false;#}
+    {#                CKEDITOR.config.extraPlugins = 'wordcount,notification';#}
+    {#                CKEDITOR.config.wordcount = {#}
+    {#                    showParagraphs: false,#}
+    {#                    showWordCount: false#}
+    {#                };#}
+    {#                {% block ckeditor_extra %}#}
+    {#                {% endblock %}#}
+    {#            }#}
+    {#            $(document).foundation();#}
+    {#        });#}
+    {##}
+    {#        $(window).keydown(function (event) {#}
+    {#            if (event.keyCode == 13) {#}
+    {#                event.preventDefault();#}
+    {#                return false;#}
+    {#            }#}
+    {#        });#}
+    {#    </script>#}
 
-          <!--   Core JS Files   -->
-    <script src="static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="static/assets/js/bootstrap.min.js" type="text/javascript"></script>
-
-	<!--  Checkbox, Radio & Switch Plugins -->
-	<script src="static/assets/js/bootstrap-checkbox-radio.js"></script>
-
-	<!--  Charts Plugin -->
-	<script src="static/assets/js/chartist.min.js"></script>
-
-    <!--  Notifications Plugin    -->
-    <script src="static/assets/js/bootstrap-notify.js"></script>
-
-
-      <script type="text/javascript">
-  $( document ).ready(function() {
-      if (typeof(CKEDITOR) != "undefined") {
-          CKEDITOR.config.format_tags = 'p';
-          CKEDITOR.config.disableNativeSpellChecker = false;
-          CKEDITOR.config.extraPlugins = 'wordcount,notification';
-          CKEDITOR.config.wordcount = {
-                showParagraphs: false,
-                showWordCount: false
-          };
-          {% block ckeditor_extra %}
-          {% endblock %}
-      }
-      $(document).foundation();
-  });
-
-  $(window).keydown(function(event){
-    if(event.keyCode == 13) {
-      event.preventDefault();
-      return false;
-    }
-  });
-  </script>
-
-  {% endblock %}
+{% endblock %}
