updated base routes to be flask classy

--- a/tinker/admin/sync/templates/sync-home.html
+++ b/tinker/admin/sync/templates/sync-home.html
@@ -69,7 +69,7 @@
 {# todo: format the gif better? #}
 {# spinner placeholder #}
 <div id="spinner" class="spinner" style="display:none;">
-    <img id="img-spinner" src="/get-image/waiting.gif" alt="Loading"/>
+    <img id="img-spinner" src="/get_image/waiting.gif" alt="Loading"/>
 </div>
 {# output results #}
 <div id="output"></div>
