Unminified some files and working on side bar

--- a/tinker/templates/creativeTim_base.html
+++ b/tinker/templates/creativeTim_base.html
@@ -70,9 +70,9 @@
         {% endblock %}
 
         {% block foundation_js_bottom %}
-            <script src="//cdnjs.cloudflare.com/ajax/libs/fastclick/0.6.11/fastclick.min.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.0/jquery.cookie.min.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-placeholder/2.0.7/jquery.placeholder.min.js"></script>
+{#            <script src="//cdnjs.cloudflare.com/ajax/libs/fastclick/0.6.11/fastclick.min.js"></script>#}
+{#            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.0/jquery.cookie.min.js"></script>#}
+{#            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-placeholder/2.0.7/jquery.placeholder.min.js"></script>#}
 
 
 {#            <script src="//cdn1.bethel.edu/foundation/js/foundation.min.js"></script>#}
