--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -132,40 +132,39 @@
                             <span class="icon-bar bar3"></span>
                         </button>
                         <a class="navbar-brand" href="/">Tinker</a>
-                        {#                    </div>#}
-                        {#                    <div class="collapse navbar-collapse">#}
-                        {#                        <ul class="nav navbar-nav navbar-right">#}
-                        {#                                                    <li>#}
-                        {#                                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
-                        {#                                                            <i class="ti-panel"></i>#}
-                        {#                                                            <p>Stats</p>#}
-                        {#                                                        </a>#}
-                        {#                                                    </li>#}
-                        {#                                                    <li class="dropdown">#}
-                        {#                                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
-                        {#                                                            <i class="ti-bell"></i>#}
-                        {#                                                            <p class="notification">5</p>#}
-                        {#                                                            <p>Notifications</p>#}
-                        {#                                                            <b class="caret"></b>#}
-                        {#                                                        </a>#}
-                        {#                                                        <ul class="dropdown-menu">#}
-                        {#                                                            <li><a href="#">Notification 1</a></li>#}
-                        {#                                                            <li><a href="#">Notification 2</a></li>#}
-                        {#                                                            <li><a href="#">Notification 3</a></li>#}
-                        {#                                                            <li><a href="#">Notification 4</a></li>#}
-                        {#                                                            <li><a href="#">Another notification</a></li>#}
-                        {#                                                        </ul>#}
-                        {#                                                    </li>#}
-                        {#                                                    <li>#}
-                        {#                                                        <a href="#">#}
-                        {#                                                            <i class="ti-settings"></i>#}
-                        {#                                                            <p>Settings</p>#}
-                        {#                                                        </a>#}
-                        {#                                                    </li>#}
-                        {#                        </ul>#}
-                        {##}
-                        {#                    </div>#}
                     </div>
+{#                    <div class="collapse navbar-collapse">#}
+{#                        <ul class="nav navbar-nav navbar-right">#}
+{#                            <li>#}
+{#                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
+{#                                    <i class="ti-panel"></i>#}
+{#                                    <p>Stats</p>#}
+{#                                </a>#}
+{#                            </li>#}
+{#                            <li class="dropdown">#}
+{#                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
+{#                                    <i class="ti-bell"></i>#}
+{#                                    <p class="notification">5</p>#}
+{#                                    <p>Notifications</p>#}
+{#                                    <b class="caret"></b>#}
+{#                                </a>#}
+{#                                <ul class="dropdown-menu">#}
+{#                                    <li><a href="#">Notification 1</a></li>#}
+{#                                    <li><a href="#">Notification 2</a></li>#}
+{#                                    <li><a href="#">Notification 3</a></li>#}
+{#                                    <li><a href="#">Notification 4</a></li>#}
+{#                                    <li><a href="#">Another notification</a></li>#}
+{#                                </ul>#}
+{#                            </li>#}
+{#                            <li>#}
+{#                                <a href="#">#}
+{#                                    <i class="ti-settings"></i>#}
+{#                                    <p>Settings</p>#}
+{#                                </a>#}
+{#                            </li>#}
+{#                        </ul>#}
+{#                    </div>#}
+                </div>
             </nav>
 
 
@@ -190,7 +189,62 @@
 
         </div>
     </div>
-
+    <div class="collapse navbar-collapse off-canvas-sidebar"
+         data-background-color="white" data-active-color="danger">
+        <div class="sidebar-wrapper">
+            <div class="logo">
+                <a href="https://www.bethel.edu/" class="simple-text">
+                    Bethel University
+                </a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    <a href="/">
+                        <i class="ti-panel"></i>
+                        <p>Home</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/event">
+                        <i class="ti-user"></i>
+                        <p>Events</p>
+                    </a>
+                </li>
+                <li>
+                    {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}
+                        <a href="/faculty-bio">
+                            <i class="ti-view-list-alt"></i>
+                            <p>Faculty Bios</p>
+                        </a>
+                    {% endif %}
+                </li>
+                <li>
+                    <a href="e-announcement">
+                        <i class="ti-text"></i>
+                        <p>E-Announcements</p>
+                    </a>
+                </li>
+                <li class="dropdown">
+                    {% if 'Administrators' in session['groups'] or 'Tinker Redirects' in session['groups'] %}
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                            <i class="ti-pencil-alt2"></i>
+                            <p>Admin Menu &raquo;</p>
+                        </a>
+                        <ul class="dropdown-menu">
+                            {% if 'Administrators' in session['groups'] %}
+                                <li><a href="/admin/publish-manager">Publisher</a></li>
+                                <li><a href="/admin/sync">Sync Metadata</a></li>
+                                {#                                <li><a href="/admin/blink-roles" class="button-nav">Blink Layout Owners</a></li>#}
+                            {% endif %}
+                            <li><a href="/admin/cache-clear">Clear Cache</a></li>
+                            <li><a href="/admin/redirect">Redirects</a></li>
+                        </ul>
+                    {% endif %}
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div id="bodyClick"></div>
 
     </body>
 
@@ -221,10 +275,10 @@
 
 
     <!--   Core JS Files   -->
-    <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-    <script src="http://127.0.0.1:5000/static/assets/js/paper-dashboard.js"></script>
+    {#    <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>#}
+    {#    <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>#}
+    {#    <!-- Paper Dashboard Core javascript and methods for Demo purpose -->#}
+    {#    <script src="http://127.0.0.1:5000/static/assets/js/paper-dashboard.js"></script>#}
 
 
     {#    <!--   Core JS Files   -->#}
