--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -76,34 +76,34 @@
                 <ul class="nav">
                     <li class="active">
                         <a href="/">
-                            <i class="ti-panel"></i>
+                            <i class="ti-home"></i>
                             <p>Home</p>
                         </a>
                     </li>
                     <li>
                         <a href="/event">
-                            <i class="ti-user"></i>
+                            <i class="ti-calendar"></i>
                             <p>Events</p>
                         </a>
                     </li>
                     <li>
                         {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}
                             <a href="/faculty-bio">
-                                <i class="ti-view-list-alt"></i>
+                                <i class="ti-info-alt"></i>
                                 <p>Faculty Bios</p>
                             </a>
                         {% endif %}
                     </li>
                     <li>
-                        <a href="e-announcement">
-                            <i class="ti-text"></i>
+                        <a href="/e-announcement">
+                            <i class="ti-comment"></i>
                             <p>E-Announcements</p>
                         </a>
                     </li>
                     <li class="dropdown">
                         {% if 'Administrators' in session['groups'] or 'Tinker Redirects' in session['groups'] %}
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                <i class="ti-pencil-alt2"></i>
+                                <i class="ti-menu"></i>
                                 <p>Admin Menu &raquo;</p>
                             </a>
                             <ul class="dropdown-menu">
@@ -244,7 +244,7 @@
             </ul>
         </div>
     </div>
-    <div id="bodyClick"></div>
+{#    <div id="bodyClick"></div>#}
 
     </body>
 
