--- a/tinker/e_announcements/templates/view.html
+++ b/tinker/e_announcements/templates/view.html
@@ -1,4 +1,4 @@
-{% extends "tinker-base.html" %}
+{% extends "tinker_base.html" %}
 
 {% block title %}{{ edit_data.title }}{% endblock %}
 {% block page_title %}{{ edit_data.title }}{% endblock %}
