--- a/tinker/templates/creativeTim_base.html
+++ b/tinker/templates/creativeTim_base.html
@@ -1,93 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-{#{% block html_attribs %}#}
-{#<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->#}
-{#<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->#}
-{#<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->#}
-{#<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->#}
-{#<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->#}
-{#{% endblock %}#}
+
+{% block html_attribs %}
+    <html lang="en">
+{% endblock %}
+
 {% block html %}
     <head>
         {% block head %}
-            <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+            <meta charset="utf-8"/>
+            <link rel="apple-touch-icon" sizes="76x76" href="http://127.0.0.1:5000/static/assets/img/apple-icon.png">
+            <link rel="icon" type="image/png" sizes="96x96" href="http://127.0.0.1:5000/static/assets/img/favicon.png">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+
             <title>{% block title %}{{ title }}{% endblock %}</title>
-            <script href="static/js/paper-dashboard.js"></script>
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
 
-            {% block meta %}
-                <meta name="viewport" content="width=device-width"/>
-                <meta charset="utf-8">
-            {% endblock %}
-            {% block head_add %}
-            {% endblock %}
+            <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
+            <meta name="viewport" content="width=device-width"/>
 
-            {% block foundation_styles %}
+            <!-- Bootstrap core CSS     -->
+            <link href="http://127.0.0.1:5000/static/assets/css/bootstrap.min.css" rel="stylesheet"/>
 
-                <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/paper-dashboard.css">
-                <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/animate.min.css">
-                <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/bootstrap.min.css">
-                <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/themify-icons.css">
-{#                <link rel="stylesheet" href="//cdn1.bethel.edu/foundation/css/normalize.css">#}
-{#                <link rel="stylesheet" href="//cdn2.bethel.edu/foundation/css/foundation.min.css">#}
-            {% endblock %}
+            <!-- Animation library for notifications   -->
+            <link href="http://127.0.0.1:5000/static/assets/css/animate.min.css" rel="stylesheet"/>
 
-            {% block styles %}
-            {% endblock %}
-            <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-            <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
+            <!--  Paper Dashboard core CSS    -->
+            <link href="http://127.0.0.1:5000/static/assets/css/paper-dashboard.css" rel="stylesheet"/>
 
-            <!--  Checkbox, Radio & Switch Plugins -->
-            <script src="http://127.0.0.1:5000/static/assets/js/bootstrap-checkbox-radio.js"></script>
 
-            <!--  Charts Plugin -->
-            <script src="http://127.0.0.1:5000/static/assets/js/chartist.min.js"></script>
+            <!--  CSS for Demo Purpose, don't include it in your project     -->
+            <link href="http://127.0.0.1:5000/static/assets/css/demo.css" rel="stylesheet"/>
 
-            <!--  Notifications Plugin    -->
-            <script src="http://127.0.0.1:5000/static/assets/js/bootstrap-notify.js"></script>
 
-            <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-            <script src="http://127.0.0.1:5000/static/assets/js/paper-dashboard.js"></script>
-
-            <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>{##}
-
-            {% if config['FOUNDATION_HTML5_SHIM'] %}
-                {% block foundation_html5_shim %}
-                    <!-- IE Fix for HTML5 Tags -->
-                    <!--[if lt IE 9]>
-        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-      <![endif]-->
-                {% endblock %}
-            {% endif %}
-
+            <!--  Fonts and icons     -->
+            <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+            <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+            <link href="http://127.0.0.1:5000/static/assets/css/themify-icons.css" rel="stylesheet">
         {% endblock %}
     </head>
+
     <body>
     {% block body %}
         {% block body_content %}
         {% endblock %}
-
-        {% block foundation_js_bottom %}
-{#            <script src="//cdnjs.cloudflare.com/ajax/libs/fastclick/0.6.11/fastclick.min.js"></script>#}
-{#            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.0/jquery.cookie.min.js"></script>#}
-{#            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-placeholder/2.0.7/jquery.placeholder.min.js"></script>#}
-
-
-{#            <script src="//cdn1.bethel.edu/foundation/js/foundation.min.js"></script>#}
-{#            <script src="//cdn1.bethel.edu/foundation/js/foundation/foundation.alert.js"></script>#}
-
-        {% endblock %}
-
-        {% block scripts %}
-        {% endblock %}
     {% endblock %}
-
-    {% block endbody %}
-    {% endblock %}
-
-
     </body>
+
+    <!--   Core JS Files   -->
+    <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
+
+    <!--  Checkbox, Radio & Switch Plugins -->
+    <script src="http://127.0.0.1:5000/static/assets/js/bootstrap-checkbox-radio.js"></script>
+
+    <!--  Charts Plugin -->
+    <script src="http://127.0.0.1:5000/static/assets/js/chartist.min.js"></script>
+
+    <!--  Notifications Plugin    -->
+    <script src="http://127.0.0.1:5000/static/assets/js/bootstrap-notify.js"></script>
+
+    <!--  Google Maps Plugin    -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+    <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
+    <script src="http://127.0.0.1:5000/static/assets/js/paper-dashboard.js"></script>
+
+    <!-- Paper Dashboard DEMO methods, don't include it in your project! -->
+    <script src="http://127.0.0.1:5000/static/assets/js/demo.js"></script>
+
 {% endblock %}
 </html>
